fix header of daily turns and responsive scrollbars

--- a/frontend/src/styles/_mainZone.css
+++ b/frontend/src/styles/_mainZone.css
@@ -160,6 +160,9 @@ main {
 @media (max-width: 1024px) or (max-height: 720px) {
   main {
     width: auto;
+    min-height: 100%;
+    height: fit-content;
+    box-sizing: border-box;
     
     > section {
       height: auto;
