--- a/frontend/src/styles/sectionsInMain/_turnoSection.css
+++ b/frontend/src/styles/sectionsInMain/_turnoSection.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  > header {
+  > header, > .header header {
     position: relative;
 
     > h2 {
@@ -167,7 +167,7 @@ details[open] > .turnsSummary {
 
 @media (max-width: 1024px) or (max-height: 720px) {
   #dailyTurnos, #dailyTurnsProffesional {
-    > header {
+    > header, > .header header {
       display: flex;
       align-items: center;
       justify-content: space-between;
